<resources>
    <string name="app_name">Proyecto</string>
    <string name="nombreUsuario">Usuario</string>
    <string name="helper_required">Requerido</string>
    <string name="Password">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_matricula">Matricula</string>
    <string name="label_1">DC (Dieta Completa)</string>
    <string name="label_2">MD (Media Dieta)</string>
    <string name="label_3">CAM (Conductor Camión)</string>
    <string name="label_4">PK (Conductor Vehículo)</string>
    <string name="label_5">SC (Salida a Carrillo)</string>
    <string name="label_6">N (Nocturnidad)</string>
    <string name="hint_name">Marcaje</string>
    <string name="dialog_delete_cancel">Cancelar</string>
    <string name="dialog_delete_confirm">Eliminar</string>
    <string name="dialog_delete_title">Eliminar Marcaje??</string>
    <string name="arg_id">key_id</string>
    <string name="edit_marcaje_title_edit">Editar Marcaje</string>
    <string name="edit_marcaje_title_add">Registar Marcaje</string>
    <string name="edit_marcaje_message_update_success">Marcaje Actualizado</string>
    <string name="edit_marcaje_message_save_success">Marcaje agregado correctamente</string>
    <string name="edit_marcaje_message_valid">Revise los campos requeridos</string>
</resources>